# canopy

./: .gitignore  CLAUDE.md  README.md  flake.nix  package.json
.githooks/: pre-commit
.github/workflows/: ci.yml
.moss/: index.sqlite
agent/: Cargo.toml  README.md
agent/dusklight-agent/: Cargo.toml
agent/dusklight-agent/src/: main.rs
docs/: architecture.md  index.md  marinada.md  package.json  philosophy.md
docs/.vitepress/: config.ts
