[package]
name = "dusklight-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dusklight-agent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
